duniverse/menhirLib.20200211/test/static/bad/colon.mly
%%

main(X)
  A B X {}
