duniverse/menhirLib.20200211/test/static/bad/colon.exp
File "colon.mly", line 4, characters 2-3:
Error: syntax error after ')' and before 'A'.
Ill-formed rule.
A colon ':' is expected at this point.
Examples of well-formed rules:
  option(X): { None } | x = X { Some x }
